# uae4arm2026p

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ags_auto.uae  run.sh
.github/workflows/: android.yml
android/: AGENTS.md  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/uae4arm2026/: ControllerMapActivity.java  Uae4ArmEmulatorActivity.java  Uae4ArmVirtualKeyboard.java
android/app/src/main/java/com/uae4arm2026/data/: AgsDetector.kt  AppPreferences.kt  AppStorage.kt  ArchiveCatalog.kt  ArchiveRepository.kt  ConfigGenerator.kt  ConfigParser.kt  ConfigRepository.kt  EmulatorLauncher.kt  FileManager.kt  FileRepository.kt  MediaPathHelper.kt  UpstreamConfig.kt
android/app/src/main/java/com/uae4arm2026/data/model/: AmigaFile.kt  AmigaModel.kt  EmulatorSettings.kt
android/app/src/main/java/com/uae4arm2026/ui/: FocusUtils.kt  MainActivity.kt  Uae4ArmApp.kt
android/app/src/main/java/com/uae4arm2026/ui/components/: MediaSelector.kt  (+1 more)
android/app/src/main/java/org/libsdl/app/: HIDDevice.java  HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDL.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java  SDLDummyEdit.java  SDLInputConnection.java  SDLSurface.java
android/app/src/main/res/drawable/: bg_section_kickstart.xml  bg_section_media.xml  bg_section_model.xml  ic_gamepad.xml  tv_banner.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
android/app/src/test/java/com/uae4arm2026/data/: ConfigGeneratorTest.kt  ConfigParserTest.kt  ConfigRepositoryTest.kt  EmulatorLauncherTest.kt  EmulatorSettingsTest.kt  FileManagerTest.kt
android/gradle/: libs.versions.toml
cmake/: Dependencies.cmake  SourceFiles.cmake  StandardProjectSettings.cmake
docs/: upstream-sync.md
scripts/git/: compare-amiberry-upstream.ps1
src/: AGENTS.md  ar.cpp  audio.cpp  blkdev_cdimage.cpp  custom.cpp  expansion.cpp  gfxboard.cpp  hardfile.cpp  inputdevice.cpp  zfile.cpp
src/archivers/7z/: 7zVersion.h  Bcj2.h  Bra.h  CpuArch.h  LzmaDec.h
src/archivers/chd/: posixfile.cpp
src/archivers/wrp/: warp.cpp
src/include/: autoconf.h  options.h  savestate.h
src/jit/: AGENTS.md
src/jit/arm/: compemu_support_arm.cpp
src/osdep/: AGENTS.md  amiberry.cpp  amiberry_filesys.cpp  amiberry_hardfile.cpp  amiberry_input.cpp  amiberry_input.h  amiberry_whdbooter.cpp  android_keyboard_bridge.cpp  android_keyboard_bridge.h  display_modes.cpp  fsdb_host.cpp  gfx_prefs_check.cpp  gfx_window.cpp  irenderer.h  on_screen_cd32pad.cpp  on_screen_cd32pad.h  on_screen_joystick.cpp  on_screen_joystick.h  opengl_renderer.cpp  opengl_renderer.h  picasso96.cpp  sdl_renderer.cpp  sdl_renderer.h  sysconfig.h  vulkan_renderer.cpp  vulkan_renderer.h
src/osdep/gui/: gui_handling.h
src/osdep/imgui/: floppy.cpp  hd.cpp  quickstart.cpp
src/uae4arm/: AGENTS.md  upstream_overrides.cpp  upstream_overrides.h
(+23 files in other folders)
